--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
+<!-- removed href on <a>-->
 <a
-  href="#"
+  style="cursor: pointer;"
   class="list-group-item clearfix"
   (click)="onSelected()">
   <div class="pull-left">
