--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,8 +1,9 @@
 <!-- removed href on <a>-->
 <a
   style="cursor: pointer;"
-  class="list-group-item clearfix"
-  (click)="onSelected()">
+  [routerLink]="[index]"
+  routerLinkActive="active"
+  class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
